package dominio.Localizacion;

public class Departamento {
    private Provincia provincia;
}
