package dominio.comunidades;

import dominio.servicios.Servicio;

import java.util.List;

public class Interes {
    List<Servicio> servicios;
}
