package dominio.Localizacion;

public class Municipio extends Localizacion{
    private Provincia provincia;
}
