package dominio.Localizacion;

public class Provincia extends Localizacion{
}
