@startuml
'https://plantuml.com/class-diagram

package ServiciosPublicos{
    abstract class ServicioPublico{}

    class Organizacion{
        sucursales: List<Sucursal>
    }

    class Sucursal{
        nombre: String
    }

    class ServicioTransporte{
        tipo: MedioDeTransporte
        lineaDeTransporteIda: Linea
        lineaDeTransporteVuelta: Linea
    }
    enum MedioDeTransporte{
        SUBTERRANEO
        FERROCARRIL
    }
    class Linea{
        nombre:String
        estacionOrigen:Estacion
        estacionDestino:Estacion
        estaciones:List<Estacion>
        localizacion: Localizacion
    }

    class Estacion{
        nombre:String
        ubicacionGeografica:String
        servicios:List<Servicio>
        agrupaciones:List<Agrupacion>
        serviciosFaltantes():List<Servicio>
    }

    Organizacion -->"*" Sucursal
    Organizacion -up-|> ServicioPublico
    ServicioTransporte -up-|> ServicioPublico
    ServicioTransporte --> MedioDeTransporte
    ServicioTransporte --> Linea
    ServicioTransporte --> Linea
    Linea --> Estacion
    Linea --> Estacion
    Linea -->"*" Estacion
}


package Servicios {
  class RepoServicios{
      servicios:List<Servicio>
      serviciosQueFatan(List<Servicio>):List<Servicio>
  }
  class Agrupacion{
      serviciosAgrupados:List<Servicio>
  }
  abstract class Servicio{
  }

  abstract class MediosDeElevacion{
    tramoRecorrido:TramoMedioDeElevacion
  }

  enum TramoMedioDeElevacion{
    CALLE_A_ACCESO
    ACCESO_A_ANDEN
  }

  class Ascensor{
  }

  class EscaleraMecanica{
  }

  class Banio{
    tipoBanio:TipoBanio
  }

  enum TipoBanio{
    HOMBRES
    MUJERES
  }

'Relaciones de servicios
    RepoServicios -left->"*" Servicio
    Estacion -->"*" Servicio
    Estacion -->"*" Agrupacion
    Agrupacion -up->"*" Servicio
    MediosDeElevacion -up-|> Servicio
    MediosDeElevacion --> TramoMedioDeElevacion
    Ascensor -up-|> MediosDeElevacion
    EscaleraMecanica -up-|> MediosDeElevacion
    Banio -up-|> Servicio
    Banio -down-> TipoBanio
}

package Comunidades{
    class Comunidad{
        miembros:List<Miembro>
    }
    class Miembro{
        nombre:String
        apellido:String
        correoElectronico:String
    }
    Comunidad -->"*" Miembro
}

class EntidadPropietaria{
    serviciosPublicos:List<ServicioPublico>
    responsable:Miembro
}

class OrganismoDeControl{
    servicios:List<Servicio>
    responsable:Miembro
}

class Interes{
    lineas: List<Linea>
    servicios: List<Servicio>
}

abstract class Localizacion {
    nombre:String
    latitud:double
    longitud:double
}

class Municipio{
    provincia: String
}

class Provincia{}

class Departamento{
    provincia: String
}

Miembro-up->Localizacion
Municipio-up-|>Localizacion
Provincia-up-|>Localizacion
Departamento-up-|>Localizacion

Linea-left->Localizacion

Miembro-->Interes
Interes-->"*"Linea
Interes-left->"*"Servicio

EntidadPropietaria-->"*"ServicioPublico
EntidadPropietaria-down->Miembro
OrganismoDeControl-->"*"Servicio
OrganismoDeControl-up->Miembro

Estacion ..> RepoServicios

@enduml